--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-./Week7/Image_Processing_with_Python/venv/Lib
+/Week7/Image_Processing_with_Python/venv/Lib
 
 **/.idea
+/Week7/Image_Processing_with_Python/venv/Scripts
